# m2stitch_registration

./: README.rst  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  _constrained_refinement.py  _global_optimization.py  _stage_model.py  _typing_utils.py  tile_registration.py
